--- a/index.html
+++ b/index.html
@@ -10,20 +10,76 @@
   <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;700&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/8f127467bf.js" crossorigin="anonymous"></script>
   <script defer src="dist/main.js"></script>
+  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"> -->
   <link rel="stylesheet" href="css/main.css">
-  <title>Document</title>
+  <title>CandyShop.com</title>
 </head>
 
 <body>
+  <div class="blur"></div>
   <header class="header">
-    <nav class="navigation"></nav>
-    <div class="hero-img">
-      <img src="" alt="" class="hero-img__image">
-    </div>
+    <nav class="navbar">
+      <div class="nav wrapper">
+
+        <button class="nav-btn"><i class="fa-solid fa-bars"></i></button>
+
+        <div class="nav-logo">
+          <img class="nav-logo__picture" src="/src/images/lollipops-g53a438777_640.png" alt="">
+          <p class="nav-logo__text">CandyShop.pl</p>
+
+        </div>
+
+        <div class="nav-menu">
+          <button class="nav-menu__btn"><i class="fa-solid fa-square-xmark"></i></button>
+          <p class="nav-menu__text">Menu: </p>
+          <div class="nav-menu__categories">
+            <li class="nav-menu__category">
+              <a href="#">Categories
+                <span class="arrow">
+                  <i class="fa-solid fa-caret-down"></i>
+                </span>
+              </a>
+              <ul class="dropdown">
+                <li><a href="#">Chocolates</a></li>
+                <li><a href="#">Candys</a></li>
+                <li><a href="#">Jellys</a></li>
+                <li><a href="#">Drinks</a></li>
+                <li><a href="#">Handmade</a></li>
+              </ul>
+            </li>
+            <li class="nav-menu__category"><a href="#">About us</a></li>
+            <li class="nav-menu__category"><a href="#">Contact</a></li>
+            <li class="nav-menu__category">
+              <a href="#">Our Locals <span class="arrow"><i class="fa-solid fa-caret-down"></i></span></a>
+              <ul class="dropdown">
+                <li><a href="#">New York</a></li>
+                <li><a href="#">London</a></li>
+                <li><a href="#">Thorn</a></li>
+              </ul>
+            </li>
+          </div>
+
+          <div class="nav-menu__account">
+            <li class="nav-menu__login"><a href="#">Login</a></li>
+            <li class="nav-menu__sign-up"><a href="#">Sign up</a></li>
+          </div>
+
+        </div>
+        <form class="nav-search">
+          <input type="text" class="nav-search__input">
+          <button class="nav-search__btn"><i class="fa-solid fa-magnifying-glass"></i></button>
+        </form>
+
+
+      </div>
+    </nav>
+    <div class="section1" style="background-color: aqua; height: 1000px;"></div>
+    <div class="section1" style="background-color: rgb(145, 255, 0); height: 1000px;"></div>
+
   </header>
 
 
-
+  <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script> -->
 </body>
 
 </html>
