--- a/index.html
+++ b/index.html
@@ -69,14 +69,97 @@
           <input type="text" class="nav-search__input">
           <button class="nav-search__btn"><i class="fa-solid fa-magnifying-glass"></i></button>
         </form>
-
-
       </div>
     </nav>
-    <div class="section1" style="background-color: aqua; height: 1000px;"></div>
-    <div class="section1" style="background-color: rgb(145, 255, 0); height: 1000px;"></div>
+
+    <div class="heading">
+      <h1 class="heading__text"><span>CandyShop.com</span> <br> Sweets from all over the world! </h1>
+    </div>
+
+    <div class="slider-container wrapper">
+      <div class="slider">
+        <img class="slider__picture" src="src/images/header-img-lg.jpg">
+        <img class="slider__picture" src="src/images/header-img-lg.jpg">
+        <img class="slider__picture" src="src/images/header-img-lg.jpg">
+      </div>
+      <button class="slider__prev-btn">
+        <i class="fa-solid fa-circle-chevron-left"></i>
+      </button>
+      <button class="slider__next-btn">
+        <i class="fa-solid fa-circle-chevron-right"></i>
+      </button>
+    </div>
+
+
 
   </header>
+
+  <main>
+    <section class="news">
+      <div class="wrapper">
+        <h2 class="news__heading">News!</h2>
+
+
+        <div class="news-slider-container wrapper">
+          <div class="slider">
+
+            <div class="slider__slide ">
+
+              <div class="product-info">
+                <img class="slider__picture" src="src/images/header-img-lg.jpg">
+                <h3 class="product-info__name">Product name 1</h3>
+                <p class="product-info__description">
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo quod.
+                </p>
+                <p class="product-info__price">10.99$</p>
+              </div>
+
+              <div class="product-info">
+                <img class="slider__picture" src="src/images/header-img-lg.jpg">
+                <h3 class="product-info__name">Product name 1</h3>
+                <p class="product-info__description">
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo quod.
+                </p>
+                <p class="product-info__price">10.99$</p>
+              </div>
+
+            </div>
+
+            <div class="slider__slide ">
+
+              <div class="product-info">
+                <img class="slider__picture" src="src/images/header-img-lg.jpg">
+                <h3 class="product-info__name">Product name 1</h3>
+                <p class="product-info__description">
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo quod.
+                </p>
+                <p class="product-info__price">10.99$</p>
+              </div>
+
+              <div class="product-info">
+                <img class="slider__picture" src="src/images/header-img-lg.jpg">
+                <h3 class="product-info__name">Product name last</h3>
+                <p class="product-info__description">
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo quod.
+                </p>
+                <p class="product-info__price">10.99$</p>
+              </div>
+
+            </div>
+
+          </div>
+          <button class="slider__prev-btn">
+            <i class="fa-solid fa-circle-chevron-left"></i>
+          </button>
+          <button class="slider__next-btn">
+            <i class="fa-solid fa-circle-chevron-right"></i>
+          </button>
+        </div>
+
+      </div>
+
+    </section>
+  </main>
 
 
   <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script> -->
