I created a basic graphics for a header baner and set graphics for news baner.i have set basics mediaqueries for ipad - 768px and nes-baner functionality for this. Search input when user gonna go to down site have 0.2 opacity to better visibility.

--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
 
     <div class="slider-container wrapper">
       <div class="slider">
-        <img class="slider__picture" src="src/images/header-img-lg.jpg">
-        <img class="slider__picture" src="src/images/header-img-lg.jpg">
-        <img class="slider__picture" src="src/images/header-img-lg.jpg">
+        <img class="slider__picture" src="src/images/Polish-classics__1_.webp">
+        <img class="slider__picture" src="src/images/oriental-sm.jpg">
+        <img class="slider__picture" src="src/images/america-sm.jpg">
       </div>
       <button class="slider__prev-btn">
         <i class="fa-solid fa-circle-chevron-left"></i>
@@ -106,21 +106,18 @@
             <div class="slider__slide ">
 
               <div class="product-info">
-                <img class="slider__picture" src="src/images/header-img-lg.jpg">
-                <h3 class="product-info__name">Product name 1</h3>
-                <p class="product-info__description">
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo quod.
-                </p>
+
+                <img class="slider__picture" src="src/images/jelly-belly.png">
+                <h3 class="product-info__name">Bean Boozled</h3>
+
                 <p class="product-info__price">10.99$</p>
               </div>
 
               <div class="product-info">
-                <img class="slider__picture" src="src/images/header-img-lg.jpg">
-                <h3 class="product-info__name">Product name 1</h3>
-                <p class="product-info__description">
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo quod.
-                </p>
-                <p class="product-info__price">10.99$</p>
+
+                <img class="slider__picture" src="src/images/bandai-doraemon-gummies-grape.png">
+                <h3 class="product-info__name">Bandai Doraemon Gummies Grape</h3>
+                <p class="product-info__price">8.99$</p>
               </div>
 
             </div>
@@ -128,21 +125,18 @@
             <div class="slider__slide ">
 
               <div class="product-info">
-                <img class="slider__picture" src="src/images/header-img-lg.jpg">
-                <h3 class="product-info__name">Product name 1</h3>
-                <p class="product-info__description">
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo quod.
-                </p>
-                <p class="product-info__price">10.99$</p>
+                <img class="slider__picture" src="src/images/cheddar-cheese-pretzel.png">
+                <h3 class="product-info__name">Cheddar Cheese Pretzel</h3>
+
+                <p class="product-info__price">7.29$</p>
               </div>
 
               <div class="product-info">
-                <img class="slider__picture" src="src/images/header-img-lg.jpg">
-                <h3 class="product-info__name">Product name last</h3>
-                <p class="product-info__description">
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo quod.
-                </p>
-                <p class="product-info__price">10.99$</p>
+
+                <img class="slider__picture" src="src/images/pocky-matcha-green-tea-japan.png">
+                <h3 class="product-info__name">Pocky Matcha Green Tea</h3>
+
+                <p class="product-info__price">4.49$</p>
               </div>
 
             </div>
