--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
         <button class="nav-btn"><i class="fa-solid fa-bars"></i></button>
 
         <div class="nav-logo">
-          <img class="nav-logo__picture" src="src/images/lollipops-g53a438777_640.png" alt="">
-          <p class="nav-logo__text">CandyShop.pl</p>
+          <img class="nav-logo__picture" src="src/images/CandyShop.com.png" alt="">
 
         </div>
 
