Createrd new prototype of navigation with a search, accoount and basket icons.

--- a/index.html
+++ b/index.html
@@ -64,10 +64,21 @@
           </div>
 
         </div>
-        <form class="nav-search">
+        <div class="actions">
+          <div class="actions__search">
+            <i class="fa-solid fa-magnifying-glass"></i>
+          </div>
+          <div class="actions__account">
+            <i class="fa-solid fa-user"></i>
+          </div>
+          <div class="actions__basket">
+            <i class="fa-solid fa-basket-shopping"></i>
+          </div>
+        </div>
+        <!-- <form class="nav-search">
           <input type="text" class="nav-search__input">
           <button class="nav-search__btn"><i class="fa-solid fa-magnifying-glass"></i></button>
-        </form>
+        </form> -->
       </div>
     </nav>
 
