Added a animation of search button and little fixed html in news section - delete other slider__slide now every product info is in one slide.

--- a/index.html
+++ b/index.html
@@ -58,15 +58,15 @@
             </li>
           </div>
 
-          <div class="nav-menu__account">
-            <li class="nav-menu__login"><a href="#">Login</a></li>
-            <li class="nav-menu__sign-up"><a href="#">Sign up</a></li>
-          </div>
+         
 
         </div>
+
+
         <div class="actions">
           <div class="actions__search">
-            <i class="fa-solid fa-magnifying-glass"></i>
+            <i class="actions__search-btn fa-solid fa-magnifying-glass"></i>
+            <input class="actions__search-input" type="text">
           </div>
           <div class="actions__account">
             <i class="fa-solid fa-user"></i>
@@ -75,10 +75,7 @@
             <i class="fa-solid fa-basket-shopping"></i>
           </div>
         </div>
-        <!-- <form class="nav-search">
-          <input type="text" class="nav-search__input">
-          <button class="nav-search__btn"><i class="fa-solid fa-magnifying-glass"></i></button>
-        </form> -->
+
       </div>
     </nav>
 
@@ -113,43 +110,43 @@
         <div class="news-slider-container wrapper">
           <div class="slider">
 
-            <div class="slider__slide ">
 
-              <div class="product-info">
 
-                <img class="slider__picture" src="src/images/jelly-belly.png">
-                <h3 class="product-info__name">Bean Boozled</h3>
+            <div class="product-info">
 
-                <p class="product-info__price">10.99$</p>
-              </div>
+              <img class="slider__picture" src="src/images/jelly-belly.png">
+              <h3 class="product-info__name">Bean Boozled</h3>
 
-              <div class="product-info">
-
-                <img class="slider__picture" src="src/images/bandai-doraemon-gummies-grape.png">
-                <h3 class="product-info__name">Bandai Doraemon Gummies Grape</h3>
-                <p class="product-info__price">8.99$</p>
-              </div>
-
+              <p class="product-info__price">10.99$</p>
             </div>
 
-            <div class="slider__slide ">
+            <div class="product-info">
 
-              <div class="product-info">
-                <img class="slider__picture" src="src/images/cheddar-cheese-pretzel.png">
-                <h3 class="product-info__name">Cheddar Cheese Pretzel</h3>
-
-                <p class="product-info__price">7.29$</p>
-              </div>
-
-              <div class="product-info">
-
-                <img class="slider__picture" src="src/images/pocky-matcha-green-tea-japan.png">
-                <h3 class="product-info__name">Pocky Matcha Green Tea</h3>
-
-                <p class="product-info__price">4.49$</p>
-              </div>
-
+              <img class="slider__picture" src="src/images/bandai-doraemon-gummies-grape.png">
+              <h3 class="product-info__name">Bandai Doraemon Gummies Grape</h3>
+              <p class="product-info__price">8.99$</p>
             </div>
+
+
+
+
+
+            <div class="product-info">
+              <img class="slider__picture" src="src/images/cheddar-cheese-pretzel.png">
+              <h3 class="product-info__name">Cheddar Cheese Pretzel</h3>
+
+              <p class="product-info__price">7.29$</p>
+            </div>
+
+            <div class="product-info">
+
+              <img class="slider__picture" src="src/images/pocky-matcha-green-tea-japan.png">
+              <h3 class="product-info__name">Pocky Matcha Green Tea</h3>
+
+              <p class="product-info__price">4.49$</p>
+            </div>
+
+
 
           </div>
           <button class="slider__prev-btn">
